View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030389 | Open CASCADE | OCCT:Data Exchange | public | 2018-11-29 10:07 | 2019-03-02 23:38 |
Reporter | emv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.3.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030389: Data Exchange - StlAPI_Writer does not check if the face has triangulation | ||||
Description | StlAPI_Writer does not check if the face has triangulation. It leads to crash on the partially meshed models. | ||||
Steps To Reproduce | box b 1 1 1 # mesh only 5 faces of the box eval compound [lrange [explode b f] 1 5] cf incmesh cf 0.1 # write stl writestl b box.stl An exception was caught 000002506CC223E0 : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x0000000000000018 during 'READ' operation ** Exception ** 000002506CC223E0 : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x0000000000000018 during 'READ' operation | ||||
Tags | No tags attached. | ||||
Test case number | bugs stlvrml bug30389 | ||||
|
Branch CR30389 has been created by emv. SHA-1: 443a47c28a05cf5213374d610348dd476db9e28f Detailed log of new commits: Author: emv Date: Thu Nov 29 10:20:23 2018 +0300 0030389: Data Exchange - StlAPI_Writer does not check if the face has triangulation When merging triangulation of the faces skip those having no triangulation. Test case for the issue. |
|
59 // create temporary triangulation 60 Handle(Poly_Triangulation) aMesh = new Poly_Triangulation (aNbNodes, aNbTriangles, Standard_False); Could you please also put here a check that aNbTriangles > 0 and return FALSE otherwise (for the case if TopoDS_Shape does not contain triangulation at all)? It might be useful also emitting a warning (e.g. using Message::DefaultMessenger()) with the number of Faces skipped due to NULL triangulation. |
|
Dear Galina, could you please review the git branch CR30389? Test results - http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR30389-master-emv/view/COMPARE/ |
|
I didn't see the message 0030389:0081290, so I will make the asked changes. |
|
Branch CR30389 has been updated forcibly by emv. SHA-1: 454bb0011c1918d6d6a79e81cb22de61f26830dd |
|
Dear Galina, could you please review the git branch CR30389? Test results - http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR30389-master-emv/view/COMPARE/ |
|
Branch CR30389 was reviewed |
|
Combination - OCCT branch : CR30389 SHA - 454bb0011c1918d6d6a79e81cb22de61f26830dd Products branch : master SHA - 4db2d6888701347b5f5ac616d0a78b5a228964c8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences Test case: bugs stlvrml bug30389 - OK CPU differences: Debian80-64: OCCT Total CPU difference: 16306.540000000025 / 16298.960000000045 [+0.05%] Products Total CPU difference: 7073.8900000000385 / 7051.820000000017 [+0.31%] Windows-64-VC14: OCCT Total CPU difference: 17805.875 / 17763.703125 [+0.24%] Products Total CPU difference: 8518.984375 / 8526.890625 [-0.09%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30389 has been deleted by inv. SHA-1: 454bb0011c1918d6d6a79e81cb22de61f26830dd |
occt: master 44d5a096 2018-11-29 07:20:23 Committer: apn Details Diff |
0030389: Data Exchange - StlAPI_Writer does not check if the face has triangulation When merging triangulation of the faces skip those having no triangulation. Test case for the issue. |
Affected Issues 0030389 |
|
mod - src/StlAPI/StlAPI_Writer.cxx | Diff File | ||
add - tests/bugs/stlvrml/bug30389 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-11-29 10:07 | emv | New Issue | |
2018-11-29 10:07 | emv | Assigned To | => gka |
2018-11-29 10:08 | emv | Assigned To | gka => emv |
2018-11-29 10:08 | emv | Status | new => assigned |
2018-11-29 10:24 | git | Note Added: 0081283 | |
2018-11-29 11:24 | kgv | Note Added: 0081285 | |
2018-11-29 12:47 | emv | Note Added: 0081290 | |
2018-11-29 12:47 | emv | Assigned To | emv => gka |
2018-11-29 12:47 | emv | Status | assigned => resolved |
2018-11-29 12:50 | emv | Note Added: 0081291 | |
2018-11-29 12:50 | emv | Assigned To | gka => emv |
2018-11-29 12:50 | emv | Status | resolved => assigned |
2018-11-29 12:50 | emv | Note Edited: 0081291 | |
2018-11-29 12:51 | emv | Note Edited: 0081291 | |
2018-11-29 14:21 | git | Note Added: 0081294 | |
2018-11-30 09:00 | emv | Note Added: 0081301 | |
2018-11-30 09:00 | emv | Assigned To | emv => gka |
2018-11-30 09:00 | emv | Status | assigned => resolved |
2018-11-30 10:47 | gka | Note Added: 0081302 | |
2018-11-30 10:47 | gka | Assigned To | gka => bugmaster |
2018-11-30 10:47 | gka | Status | resolved => reviewed |
2018-11-30 11:37 | apn | Test case number | => bugs stlvrml bug30389 |
2018-11-30 11:37 | apn | Note Added: 0081305 | |
2018-11-30 11:37 | apn | Status | reviewed => tested |
2018-12-02 14:48 | apn | Changeset attached | => occt master 44d5a096 |
2018-12-02 14:48 | apn | Assigned To | bugmaster => apn |
2018-12-02 14:48 | apn | Status | tested => verified |
2018-12-02 14:48 | apn | Resolution | open => fixed |
2018-12-03 10:38 | git | Note Added: 0081329 | |
2019-03-02 23:38 | kgv | Relationship added | has duplicate 0030224 |