0030389: Data Exchange - StlAPI_Writer does not check if the face has triangulation

When merging triangulation of the faces skip those having no triangulation.
Test case for the issue.